<resources>
    <string name="app_name">TTTSeaimThai-Vu</string>
    <string name="title_main">Tic Tac Toe</string>
    <string name="help">Help</string>
    <string name="zero">Zero</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="play">Play</string>
    <string name="score">Score</string>
    <string name="descriptPlay">You are playing against Player 2</string>
    <string name="descriptAI">You are playing against the AI</string>
    <string name="title_help">Instructions</string>
    <string name="title_score">Scores</string>
    <string name="help_text1">Tic Tac Toe is a 3X3 board game where two players try to place their marks in horizontal, vertical or diagonal rows.</string>
    <string name="help_text2">The first game by default is a Human vs Human game.</string>
    <string name="help_text3">Press Reset to restart a Tic Tac Toe game session.</string>
    <string name="help_text4">Press Zero to reset the Scores.</string>
    <string name="help_text5">Press Play to restart the session and switch between Player 1 vs Player 2 and Player 1 vs AI.</string>
    <string name="help_text6">Press Score to see the Score board.</string>
    <string name="close_btn">Return</string>
    <string name="score_p1">Player 1 Score: </string>
    <string name="score_p2">Player 2 Score: </string>
    <string name="score_ai">AI Score: </string>
    <string name="score_tie">Number of Ties: </string>
    <string name="authors">App written by Thai-Vu Nguyen and Seaim Khan</string>
    <string name="you_win">Player 1 wins this round.</string>
    <string name="he_win">Player 2 wins this round.</string>
    <string name="ai_win">You lost to a random AI. How Sad.</string>
    <string name="tie_win">This game is a tie.</string>
    <string name="zero_text">You have reset the scores.</string>
</resources>
