<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScoreActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/score"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_score"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/score_p1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_p1"/>

    <TextView
        android:id="@+id/score_p2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_p2"/>
    <TextView
        android:id="@+id/score_Ai_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_ai"/>
    <TextView
        android:id="@+id/score_tie_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_tie"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_btn"
        android:onClick="onBtnFinish"
        android:layout_gravity="center_horizontal" />

</LinearLayout>